welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: not found: value estFasseMur
while (estFasseMur == false){
       ^Runner:4: error: not found: value estFasseMur
	if (estFasseMur== true){
            ^