welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (estFasseMur == false){
	avance() 
	if (estFasseMur== true){
		gauche() 
		avance()
		droite()
		avance()
	}
}
